hphp/test/zend/bad/array_type_hint_001.php
<?php
function foo(array $a) {
	echo count($a)."\n";
}

foo(array(1,2,3));
foo(123);
?>